# NuDrop

./: .gitignore  README.md  pyproject.toml
backend/: app.py  pyproject.toml
backend/nudrop/: app.py  config.py  signer.py  sockets.py
frontend/: package.json
frontend/app/: package.json
frontend/app/src/: main.js
frontend/app/src/components/: Editor.vue  EditorIcon.vue  Encrypt.vue  Footer.vue  Navbar.vue  PolicyCreate.vue
frontend/src/: App.vue  main.js
frontend/src/components/: Decrypt.vue  Editor.vue  Encrypt.vue  FileViewer.vue  Footer.vue  Home.vue  Navbar.vue  PolicyCreate.vue  Wallet.vue
frontend/src/styles/: editor.scss  theme.scss
infra/dev/: docker-compose.yml
infra/dev/nginx/: nginx.conf
infra/frontend/: Dockerfile.dev
nudrop/: app.py
nudrop/tmpl/: base.html  decrypt.html  policy.html  register_alice.html  register_bob.html
prototype/: README.org  nudrop.py
prototype/metamask/: app.py  index.html
prototype/nudrop/tmpl/: base.html  encrypt.html  home.html  register_alice.html
