[tool.poetry]
name = "NuDrop"
version = "0.0.1"
description = ""
authors = ["Rohan Verma <hello@rohanverma.net>"]
license = "AGPL v3.0"

[tool.poetry.dependencies]
python = "^3.9"
nucypher = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
