[tool.poetry]
name = "NuDrop"
version = "0.0.1"
description = ""
authors = ["Rohan Verma <hello@rohanverma.net>"]
license = "AGPL v3.0"

[tool.poetry.dependencies]
python = "^3.9"
nucypher = "^4.6.0"
Flask = "^1.1.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.20.0"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
