[tool.poetry]
name = "NuDrop"
version = "0.0.1"
description = ""
authors = ["Rohan Verma <hello@rohanverma.net>"]
license = "AGPL v3.0"

[tool.poetry.dependencies]
python = "^3.9"
nucypher = "^4.7.1"
Flask = "^1.1.2"
redis = "^3.5.3"
web3 = "5.12.3"
Flask-Cors = "^3.0.10"
Flask-SocketIO = "^5.0.1"
python-socketio = "^5.1.0"
fastapi = "^0.63.0"
fastapi-socketio = "^0.0.6"
aioredis = "^1.3.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
python-multipart = "^0.0.5"
nest-asyncio = "^1.5.1"
asgiref = "^3.3.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.20.0"
ipdb = "^0.13.4"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
